# lr0-item-set

./: .gitignore  Main.hs  Makefile  README.md  input.txt  input2.txt  input3.txt  input4.txt  lr0-item-set.cabal  output1.txt  output2.txt  output3.txt  output4.txt
src/: Main.hs
src/LR0ItemSet/: Algorithm.hs  Data.hs  Parse.hs
