name:                lr0-item-set
version:             0.1.0.0
synopsis:            Constructs the set of LR(0) items from a DCFG
-- description:         
homepage:            https://github.com/RyanGlScott/lr0-item-set
license:             GPL-3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@ku.edu
-- copyright:           
category:            Parsing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable lr0-item-set
  main-is:             Main.hs
  other-modules:       LR0ItemSet.Algorithm
                       LR0ItemSet.Data
                       LR0ItemSet.Parse
  build-depends:       base >= 4 && < 4.8
                     , containers
                     , mtl
                     , parsec
                     , text
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
